# OPC-UA-Honey-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-freeze.txt  requirements.txt
dobot_server/: server.py  utils.py
dobot_server/files/: config.yaml
dobot_server/files/certificates/: put_your_certificates_and_eys_here.md
dobot_server/files/programs/: move_stacked_up_cubes.txt  stack_up_cubes.txt
dobot_server/robot_simulation/: programs.py  robot.py
honey_client/: client.py
